--- a/views/expir-info.html
+++ b/views/expir-info.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <title>仪器/对照品效期查询</title>
+    title>仪器设备/对照品
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -490,7 +490,7 @@
             <i class="fas fa-search"></i>
             仪器/对照品效期查询系统
         </h1>
-        <p>快速查询仪器设备和对照品的有效期信息，及时了解即将过期物品</p>
+        <p>快速查询仪器设备和对照品的有效期信息，及时了解即将过期设备/对照品</p>
     </div>
 
     <div class="search-section">
@@ -557,7 +557,7 @@
     </div>
 
     <div class="footer">
-        <p>仪器/对照品效期查询系统 &copy; 2023 | 版本 2.0</p>
+        <p>仪器设备/对照品效期查询 &copy; 2025 | 版本 3.0</p>
     </div>
 
     <script>
@@ -609,7 +609,7 @@
                     <div class="no-data">
                         <i class="fas fa-search"></i>
                         <h3>请输入查询关键字开始搜索</h3>
-                        <p>您可以输入设备编号、名称或对照品批号进行查询</p>
+                        <p>可以输入设备编号、名称或对照品批号进行查询</p>
                     </div>
                 `);
             });
