--- a/views/expir-info.html
+++ b/views/expir-info.html
@@ -5,7 +5,6 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    title>仪器设备/对照品
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
     <style>
         :root {
@@ -488,7 +487,7 @@
     <div class="header">
         <h1>
             <i class="fas fa-search"></i>
-            仪器/对照品效期查询系统
+            仪器/对照品效期查询
         </h1>
         <p>快速查询仪器设备和对照品的有效期信息，及时了解即将过期设备/对照品</p>
     </div>
